backend/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quotes
    sandbox: learn-kubernetes
    learn-kubernetes: quotes
  name: qotd-backend
spec:
  port:
    targetPort: 10000-tcp
  to:
    kind: Service
    name: qotd-backend
